cmake_minimum_required(VERSION 3.13)
project(EE553_CPP)

set(CMAKE_CXX_STANDARD 14)

include_directories(EE553_CPP)
include_directories(Lesson4)


add_executable(data data/main.cpp)
add_executable(data2_2 data2_2/main.cpp)
add_executable(data2_3_goldenMeanSearch data2_3_goldenMeanSearch/main.cpp)
add_executable(data2_binarySearch data2_binarySearch/binary_search.cpp)
add_executable(data3_1 data3_1/main.cpp)
add_executable(data3_2_vector data3_2_vector/main.cpp)
add_executable(data_2_Prime data_2_Prime/main.cpp)
add_executable(data_2_testprocedure data_2_testprocedure/main.cpp)
add_executable(EE553_CPP EE553_CPP/main.cpp)
add_executable(session1 EE553_CPP/session1.h)
add_executable(session2 EE553_CPP/session2.h)
add_executable(session3 EE553_CPP/session3.h)
add_executable(session4 EE553_CPP/session4.h)
add_executable(hwFraction hwFraction/main.cpp)
add_executable(Lesson1 Lesson1/main.cpp)
add_executable(lesson2 lesson2/main.cpp)
add_executable(Lesson3 Lesson3/main.cpp)
add_executable(Lesson3_Body Lesson3_Body/main.cpp)
add_executable(Lesson3_class Lesson3_class/main.cpp)
add_executable(Lesson4_Fraction Lesson4/Fraction.cpp)
add_executable(Lesson4 Lesson4/main.cpp)
add_executable(Lesson4_static Lesson4_static/main.cpp)
